@@ -18,16 +18,26 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 public class UsuarioRepositoryJSON implements UsuarioRepository {
     
-    private static final String DATA_DIR = "data";
-    private static final String USERS_FILE = "users.json";
-    private final Path dataPath;
-    private final Path usersFilePath;
+    private static final String DATA_DIR = "database";
+    private static final String USERS_DIR = "users";
+    private static final String PASSAGEIROS_DIR = "passageiros";
+    private static final String MOTORISTAS_DIR = "motoristas";
+    private static final String ID_COUNTER_FILE = "id_counter.txt";
+    
+    private final Path databasePath;
+    private final Path usersPath;
+    private final Path passageirosPath;
+    private final Path motoristasPath;
+    private final Path idCounterPath;
     private final ObjectMapper objectMapper;
     private final ReadWriteLock lock;
     
     public UsuarioRepositoryJSON() {
-        this.dataPath = Paths.get(DATA_DIR);
-        this.usersFilePath = dataPath.resolve(USERS_FILE);
+        this.databasePath = Paths.get(DATA_DIR);
+        this.usersPath = databasePath.resolve(USERS_DIR);
+        this.passageirosPath = usersPath.resolve(PASSAGEIROS_DIR);
+        this.motoristasPath = usersPath.resolve(MOTORISTAS_DIR);
+        this.idCounterPath = databasePath.resolve(ID_COUNTER_FILE);
         this.objectMapper = new ObjectMapper();
         this.lock = new ReentrantReadWriteLock();
         
@@ -40,13 +50,23 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     
     private void initializeDataDirectory() {
         try {
-            if (!Files.exists(dataPath)) {
-                Files.createDirectories(dataPath);
+            // Criar estrutura de diretórios
+            if (!Files.exists(databasePath)) {
+                Files.createDirectories(databasePath);
+            }
+            if (!Files.exists(usersPath)) {
+                Files.createDirectories(usersPath);
+            }
+            if (!Files.exists(passageirosPath)) {
+                Files.createDirectories(passageirosPath);
+            }
+            if (!Files.exists(motoristasPath)) {
+                Files.createDirectories(motoristasPath);
             }
             
-            // Criar arquivo de usuários se não existir
-            if (!Files.exists(usersFilePath)) {
-                Files.write(usersFilePath, "[]".getBytes());
+            // Criar arquivo de contador de IDs se não existir
+            if (!Files.exists(idCounterPath)) {
+                Files.write(idCounterPath, "1".getBytes());
             }
         } catch (IOException e) {
             throw new RuntimeException("Erro ao inicializar diretório de dados", e);
@@ -57,8 +77,6 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public User save(User user) {
         lock.writeLock().lock();
         try {
-            List<User> users = loadUsers();
-            
             // Verificar se usuário já existe
             if (user.getCpf() != null && existsByCpf(user.getCpf())) {
                 throw new IllegalArgumentException("Usuário com CPF " + user.getCpf() + " já existe");
@@ -68,8 +86,12 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
                 throw new IllegalArgumentException("Usuário com email " + user.getEmail() + " já existe");
             }
             
-            users.add(user);
-            saveUsers(users);
+            // Gerar ID único
+            Long newId = generateNextId();
+            user.setId(newId);
+            
+            // Salvar usuário em arquivo separado por tipo
+            saveUserToFile(user);
             
             return user;
         } finally {
@@ -81,7 +103,7 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public Optional<User> findByCpf(String cpf) {
         lock.readLock().lock();
         try {
-            List<User> users = loadUsers();
+            List<User> users = loadAllUsers();
             return users.stream()
                     .filter(user -> cpf.equals(user.getCpf()))
                     .findFirst();
@@ -94,7 +116,7 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public Optional<User> findByEmail(String email) {
         lock.readLock().lock();
         try {
-            List<User> users = loadUsers();
+            List<User> users = loadAllUsers();
             return users.stream()
                     .filter(user -> email.equals(user.getEmail()))
                     .findFirst();
@@ -107,7 +129,7 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public List<User> findAll() {
         lock.readLock().lock();
         try {
-            return new ArrayList<>(loadUsers());
+            return new ArrayList<>(loadAllUsers());
         } finally {
             lock.readLock().unlock();
         }
@@ -117,17 +139,15 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public User update(User user) {
         lock.writeLock().lock();
         try {
-            List<User> users = loadUsers();
-            
-            for (int i = 0; i < users.size(); i++) {
-                if (user.getCpf() != null && user.getCpf().equals(users.get(i).getCpf())) {
-                    users.set(i, user);
-                    saveUsers(users);
-                    return user;
-                }
+            // Verificar se usuário existe
+            if (!existsByCpf(user.getCpf())) {
+                throw new IllegalArgumentException("Usuário com CPF " + user.getCpf() + " não encontrado");
             }
             
-            throw new IllegalArgumentException("Usuário com CPF " + user.getCpf() + " não encontrado");
+            // Atualizar arquivo do usuário
+            saveUserToFile(user);
+            
+            return user;
         } finally {
             lock.writeLock().unlock();
         }
@@ -137,14 +157,18 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public boolean deleteByCpf(String cpf) {
         lock.writeLock().lock();
         try {
-            List<User> users = loadUsers();
-            boolean removed = users.removeIf(user -> cpf.equals(user.getCpf()));
-            
-            if (removed) {
-                saveUsers(users);
+            Optional<User> userOpt = findByCpf(cpf);
+            if (userOpt.isPresent()) {
+                User user = userOpt.get();
+                Path userFile = getUserFilePath(user);
+                
+                if (Files.exists(userFile)) {
+                    Files.delete(userFile);
+                    return true;
+                }
             }
             
-            return removed;
+            return false;
         } finally {
             lock.writeLock().unlock();
         }
@@ -154,7 +178,7 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public boolean existsByCpf(String cpf) {
         lock.readLock().lock();
         try {
-            List<User> users = loadUsers();
+            List<User> users = loadAllUsers();
             return users.stream().anyMatch(user -> cpf.equals(user.getCpf()));
         } finally {
             lock.readLock().unlock();
@@ -165,7 +189,7 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public boolean existsByEmail(String email) {
         lock.readLock().lock();
         try {
-            List<User> users = loadUsers();
+            List<User> users = loadAllUsers();
             return users.stream().anyMatch(user -> email.equals(user.getEmail()));
         } finally {
             lock.readLock().unlock();
@@ -189,13 +213,87 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
         }
     }
     
-    private void saveUsers(List<User> users) {
+    private Long generateNextId() {
         try {
-            String jsonContent = objectMapper.writeValueAsString(users);
-            Files.write(usersFilePath, jsonContent.getBytes());
+            String currentId = Files.readString(idCounterPath).trim();
+            Long nextId = Long.parseLong(currentId);
+            
+            // Incrementar e salvar próximo ID
+            Files.write(idCounterPath, String.valueOf(nextId + 1).getBytes());
+            
+            return nextId;
         } catch (IOException e) {
-            throw new RuntimeException("Erro ao salvar usuários no arquivo", e);
+            throw new RuntimeException("Erro ao gerar ID único", e);
         }
+    }
+    
+    private void saveUserToFile(User user) {
+        try {
+            // Determinar diretório baseado no tipo
+            Path userDir = "passageiro".equals(user.getTipo()) ? passageirosPath : motoristasPath;
+            
+            // Criar arquivo com nome baseado no ID
+            Path userFile = userDir.resolve("user_" + user.getId() + ".json");
+            
+            // Salvar usuário em arquivo JSON separado
+            String jsonContent = objectMapper.writeValueAsString(user);
+            Files.write(userFile, jsonContent.getBytes());
+        } catch (IOException e) {
+            throw new RuntimeException("Erro ao salvar usuário no arquivo", e);
+        }
+    }
+    
+    private List<User> loadAllUsers() {
+        List<User> allUsers = new ArrayList<>();
+        
+        try {
+            // Carregar passageiros
+            if (Files.exists(passageirosPath)) {
+                Files.list(passageirosPath)
+                     .filter(path -> path.toString().endsWith(".json"))
+                     .forEach(path -> {
+                         try {
+                             String content = Files.readString(path);
+                             User user = objectMapper.readValue(content, User.class);
+                             allUsers.add(user);
+                         } catch (IOException e) {
+                             // Ignorar arquivos corrompidos
+                         }
+                     });
+            }
+            
+            // Carregar motoristas
+            if (Files.exists(motoristasPath)) {
+                Files.list(motoristasPath)
+                     .filter(path -> path.toString().endsWith(".json"))
+                     .forEach(path -> {
+                         try {
+                             String content = Files.readString(path);
+                             User user = objectMapper.readValue(content, User.class);
+                             allUsers.add(user);
+                         } catch (IOException e) {
+                             // Ignorar arquivos corrompidos
+                         }
+                     });
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("Erro ao carregar usuários", e);
+        }
+        
+        return allUsers;
+    }
+    
+    private Path getUserFilePath(User user) {
+        // Determinar diretório baseado no tipo
+        Path userDir = "passageiro".equals(user.getTipo()) ? passageirosPath : motoristasPath;
+        
+        // Retornar caminho do arquivo
+        return userDir.resolve("user_" + user.getId() + ".json");
+    }
+    
+    private void saveUsers(List<User> users) {
+        // Este método não é mais usado, mas mantido para compatibilidade
+        // Cada usuário é salvo em arquivo separado
     }
     
     /**
@@ -205,17 +303,40 @@ public class UsuarioRepositoryJSON implements UsuarioRepository {
     public void clear() {
         lock.writeLock().lock();
         try {
-            saveUsers(new ArrayList<>());
+            // Remover todos os arquivos de usuários
+            clearDirectory(passageirosPath);
+            clearDirectory(motoristasPath);
+            
+            // Resetar contador de IDs
+            Files.write(idCounterPath, "1".getBytes());
         } finally {
             lock.writeLock().unlock();
         }
     }
     
+    private void clearDirectory(Path directory) {
+        try {
+            if (Files.exists(directory)) {
+                Files.list(directory)
+                     .filter(path -> path.toString().endsWith(".json"))
+                     .forEach(path -> {
+                         try {
+                             Files.delete(path);
+                         } catch (IOException e) {
+                             // Ignorar erros de limpeza
+                         }
+                     });
+            }
+        } catch (IOException e) {
+            // Ignorar erros de limpeza
+        }
+    }
+    
     /**
-     * Retorna o caminho do arquivo de dados
+     * Retorna o caminho do diretório de dados
      * Útil para testes e debug
      */
     public Path getDataFilePath() {
-        return usersFilePath;
+        return databasePath;
     }
 }
